# code_educator

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  activate.sh  cmake_install.cmake  dev_srcipt.sh  docker-compose.yaml  manage.py  package-lock.json  package.json  quick_start.sh  readme.md  requirements.txt  setup.py  setup_venv.sh
backend/: Dockerfile
backend/srcs/: Dockerfile
backend/srcs/cpp/bindings/: bindings.cpp
backend/srcs/cpp/parser/: Analyzer.cpp  CodeParser.cpp
backend/srcs/python/: server.py
backend/srcs/python/models/: __init__.py
backend/srcs/python/services/: __init__.py  ai_service.py  code_service.py
code_educator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
frontend/: Dockerfile  index.html  style.css  tsconfig.json
frontend/components/: CodeAnalyzer.tsx
frontend/js/: api-client.ts  app.ts
frontend/lib/: api.ts
frontend/public/js/: api-client.js  app.js
frontend/public/lib/: api.js
include/: Analyzer.hpp  CodeParser.hpp  code_parser.hpp
nginx/: nginx.conf
script/: setup.py  venv_manager.sh
srcs/code_educator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
srcs/cpp/bindings/: bindings.cpp
srcs/cpp/parser/: CodeParser.cpp  code_parser.cpp
srcs/python/: api.py  cli.py  server.py
srcs/python/models/: schemas.py
test/: test.c  test.cpp  test.js  test.py
tools/: .env  .gitignore
